# obsidian-agent-cli

./: .gitignore  README.md  SKILL.md  obsidian_skill.md  pyproject.toml  registry.json
docs/: INSTALL.md  SKILL_SETUP.md  USAGE.md
obsidian_cli/: canvas_builder.py  config.py  excalidraw_builder.py  kanban_builder.py  main.py  registry.py  transport.py
obsidian_cli/commands/: active.py  batch_cmd.py  canvas.py  config_cmd.py  core_cmd.py  excalidraw.py  export_cmd.py  git_cmd.py  kanban.py  lint_cmd.py  meta_cmd.py  mover_cmd.py  note.py  periodic.py  quickadd_cmd.py  refactor_cmd.py  run.py  search.py  status_cmd.py  tags_cmd.py  tasks_cmd.py  teach.py  template_cmd.py  uri.py  vault_cmd.py  workspace_cmd.py
tests/: test_canvas_builder.py  test_config.py  test_excalidraw_builder.py  test_kanban_builder.py  test_registry.py  test_transport.py
tests/commands/: test_active.py  test_batch_cmd.py  test_canvas.py  test_core_cmd.py  test_excalidraw.py  test_export_cmd.py  test_git_cmd.py  test_kanban.py  test_lint_cmd.py  test_meta_cmd.py  test_mover_cmd.py  test_note.py  test_periodic.py  test_quickadd_cmd.py  test_refactor_cmd.py  test_search.py  test_tags_cmd.py  test_tasks_cmd.py  test_teach.py  test_template_cmd.py  test_uri.py  test_vault_cmd.py  test_workspace_cmd.py
