[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-agent-cli"
version = "0.1.1"
description = "Full-featured CLI for Obsidian — manage notes, canvases, Excalidraw, Kanban, periodic notes, git, tasks, and more."
authors = [
    {name = "ProxyLand", email = "proxylandllc@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
obsidian-agent = "obsidian_cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
